CHANGELOG
=========

7.x-0.4 : 09 January 2013
--------------------------

 * Issue
  #1852784: Installation screen: Setup functionalities not accessible with keyboard ?
  #1852934: Maintenance theme: image not found

 * Module updated 
    - linkchecker (1.0)

 * Module added:
    - easy_breadcrumb
    - field_slideshow
    - rules

 * Config added:
    - colorbox
    - easy_breadcrumb
    - path_breadcrumb
    - displaysuite
    - sweaver
    - text-resize

 * Content type:
  - default set of field display added

 * Theme:
    - nerra
      - Breadcrumb region added
      - Theming for content type
    - cms_theme
      - Breadcrumb region added
      - Theming for system page

7.x-0.3 : 28 november 2012
--------------------------
 * Issue
  #1852770: Installation screen: translation of languages
  #1852774: Installation screen: setup roles
  #1852804: Missing module: references
  #1852820: Module upgrade: entityreference
  #1852910: Module upgrade: countries
  #1852918: Module upgrade: diff (2.0 is unsupported)
  #1852920: Module upgrade: metatag

 * Module added:
    - sweaver (1.3)
    - colorbox
    - field_slideshow
    
 * Module updated 
    - countries (2.1)
    - diff (3.2)
    - entityreference (1.0)
    - metatag (1.0-beta4)

 * Theme:
	- minimal layout added to nerra
	- minimal layout added to cms_theme

 * Config added:
    - DS
    - IMCE
    - Pathauto

 * Config remove:
    - Create a default Builder user
    - search_config

* Module remove: 
    - better_formats

7.x-0.2 : 21 november 2012
--------------------------
 * Issue #1837894 : Library update: ckeditor
 * Issue #1838178 : Missing module: ckeditor

 * Drupal updated to 7.17
 * Module updated 
    - ds (2.0)
    - email (1.2)
    - flag (2.0)
    - google_analytics (1.3)
    - imce (1.6)
    - metatag (1.0-beta2)
    - print (1.2)
    - redirect (1.0-rc1)
    - token (1.4)
    - views (3.5)

 * Module added: 
    - better_formats
    - draggableviews
    - lexicon
    - mollom