@@ -1,7 +1,7 @@
 api = 2
 core = 7.x
 
-projects[drupal][version] = "7.17"
+projects[drupal][version] = "7.18"
 
 projects[openfed][type] = profile
 projects[openfed][download][url] = http://git.drupal.org/sandbox/bart.hanssens/1813432.git
