@@ -746,7 +746,7 @@ function _openfed_return_permission_authenticated_user() {
       'view ds_flag_bookmarks on node' => TRUE,
       'view anchor on node' => TRUE,
       'view file_name on node' => TRUE,
-      'view file_reference on node' => TRUE,
+//      'view file_reference on node' => TRUE,
       'view file_size on node' => TRUE,
       'view file_type on node' => TRUE,
       'view file_url_open on node' => TRUE,
@@ -798,7 +798,7 @@ function _openfed_return_permission_anonymous_user() {
       'view ds_flag_bookmarks on node' => TRUE,
       'view anchor on node' => TRUE,
       'view file_name on node' => TRUE,
-      'view file_reference on node' => TRUE,
+//      'view file_reference on node' => TRUE,
       'view file_size on node' => TRUE,
       'view file_type on node' => TRUE,
       'view file_url_open on node' => TRUE,
